Fix spacing issues and change mobile view breakpoint

--- a/app/assets/stylesheets/components/curriculum_details.scss
+++ b/app/assets/stylesheets/components/curriculum_details.scss
@@ -1,9 +1,17 @@
 .curriculum-details {
-  padding: 70px 0;
+  padding: 60px 0;
 
   .curriculum-details-title {
     text-align: center;
     margin-bottom: 60px;
+
+    @include media-breakpoint-down(xs) {
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      margin-bottom: 16px;
+    }
 
     .stacks {
       font-size: 18px;
@@ -11,11 +19,19 @@
       letter-spacing: 0.2px;
       line-height: 1.94;
       margin-bottom: 35px;
+
+      @include media-breakpoint-down(xs) {
+        margin-bottom: 15px;
+      }
     }
   }
 
   .curriculum-details-grid {
     justify-content: center;
+
+    @include media-breakpoint-down(xs) {
+      flex-direction: column;
+    }
 
     .curriculum-details-tile {
       @include box-shadow(0 7px 16px 0 rgba(0, 0, 0, 0.05));
@@ -33,7 +49,7 @@
         height: 160px;
         width: 160px;
 
-        @media screen and (max-width: 480px) {
+        @include media-breakpoint-down(xs) {
           height: 80px;
           width: 80px;
         }
@@ -59,17 +75,13 @@
         }
       }
 
-      @media screen and (min-width: 481px) and (max-width: 575px) {
-        margin: 0 30px 30px;
-      }
-
-      @media screen and (max-width: 480px) {
-        align-items: center;
+      @include media-breakpoint-down(xs) {
         flex-direction: row;
         height: 130px;
-        margin-right: 0;
+        margin: 0 auto 15px;
         padding: 25px;
         width: 270px;
+        max-width: 270px;
 
         h3 {
           margin: 0 0 0 25px;
@@ -88,7 +100,7 @@
     font-size: 18px;
     height: 60px;
     letter-spacing: 0.2px;
-    margin: 60px auto 70px;
+    margin: 60px auto 0;
     padding: 18px;
     width: 270px;
   }
